<?xml version="1.0"?>
<package format="3">

    <!-- Package imformation -->
    <name>carsa_gazebo</name>
    <version>0.0.0</version>
    <description>CARSA Creative Mobility Competition Gazebo Simulation</description>

    <!-- Maintainer and author -->
    <maintainer email="mgkilprg@gmail.com">Minkyu Kil</maintainer>
    <author email="mgkilprg@gmail.com">Minkyu Kil</author>

    <!-- License information -->
    <license>Apache-2.0</license>

    <!-- Build tool : ament_cmake -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Runtime dependencies -->
    <exec_depend>rviz-imu-plugin        </exec_depend>
    <exec_depend>rviz-satellite         </exec_depend>
    <exec_depend>velodyne_gazebo_plugins</exec_depend>

    <!-- Export build system information -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>